--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Cadastro de usuário</h2>
-        <form id="login" action="#">
+        <form id="login">
             <div class="form-group">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email">
@@ -18,7 +18,7 @@
                 <label for="senha">Password:</label>
                 <input type="password" id="senha" name="senha" required>
             </div>
-            <button type="submit">Cadastrar</button>
+            <button type="button">Cadastrar</button>
         </form>
     </div>
     
