--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Cadastro de usuário</h2>
         <form id="login">
             <div class="form-group">
                 <label for="email">E-mail:</label>
@@ -18,7 +17,7 @@
                 <label for="senha">Password:</label>
                 <input type="password" id="senha" name="senha" required>
             </div>
-            <button type="button">Cadastrar</button>
+            <button type="button">Login</button>
         </form>
     </div>
     
