--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleLogin.css">
 </head>
 <body>
     <div class="login-container">
@@ -17,15 +17,15 @@
                 <label for="senha">Password:</label>
                 <input type="password" id="senha" name="senha" required>
             </div>
-            <button id="bnt-login" type="button">Login</button>
+            <button id="btn-login" type="button">Login</button>
         </form>
     </div>
     
    
 
 
-    <script type="module" src="js/app.js" ></script>
-    <script src="js/validation.js"></script>
+    <script type="module" src="js/auth.js" ></script>
+    <script src="js/validationLogin.js"></script>
    
 
 </body>
