--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,6 @@
    
 
 
-    <script type="module" src="js/auth.js" ></script>
-    <script src="js/validationLogin.js"></script>
-   
-
+    <script type="module" src="js/controllers/authController.js" ></script>
 </body>
 </html>
