--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <div class="login-container">
+        <div class="box-imgLogin">
+            <img class="img-login" src="img/login.jpg" alt="imc-login">
+        </div>
         <form id="login">
             <div class="form-group">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="senha">Password:</label>
+                <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha" required>
             </div>
             <button id="btn-login" type="button">Login</button>
