arquivo index movido para pasta raiz

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/styleLogin.css">
+    <link rel="stylesheet" href="public/css/styleLogin.css">
 </head>
 <body>
     <div class="login-container">
         <div class="box-imgLogin">
-            <img class="img-login" src="img/login.jpg" alt="imc-login">
+            <img class="img-login" src="public/img/login.jpg" alt="imc-login">
         </div>
         <form id="login">
             <div class="form-group">
@@ -27,6 +27,6 @@
    
 
 
-    <script type="module" src="js/controllers/authController.js" ></script>
+    <script type="module" src="public/js/controllers/authController.js" ></script>
 </body>
 </html>
