pasta index movida para dentro da pasta public para teste

--- a/public/historico-medicoes.html
+++ b/public/historico-medicoes.html
@@ -13,7 +13,7 @@
   <button id="open-btn" class="fa-solid fa-bars"></button>
         <div class="sidebar" id="sidebar">
           <ul>
-              <li><a href="../public/configuracoes.html">Usuario</a></li>
+              <li><a id="usuario" href="../public/configuracoes.html">Usuario</a></li>
               <li><a href="../public/imc.html">Calculadora</a></li>
               <li><a href="../public/historico-medicoes.html">Historico</a></li>
               <li><a href="">Sair</a></li>
@@ -28,13 +28,7 @@
       <div id="resultado"></div>
      <div id="indicador"></div>
 
-    <script type="module" src="js/controllers/imcController.js">
-
-        
-
-            
-    </script>
-    <script type="module" src="js/controllers/authController.js" ></script>
+    <script type="module" src="js/controllers/imcController.js"></script>
     <script type="module" src="js/controllers/authController.js" ></script>
     <script type="module" src="js/controllers/config.js" ></script>
    
