--- a/public/imc.html
+++ b/public/imc.html
@@ -13,10 +13,10 @@
   
         <div class="sidebar" id="sidebar">
           <ul>
-              <li><a href="../public/configuracoes.html">Usuario</a></li>
+              <li><a id="usuario" href="../public/configuracoes.html">Usuario</a></li>
               <li><a href="../public/imc.html">Calculadora</a></li>
               <li><a href="../public/historico-medicoes.html">Historico</a></li>
-              <li><a href="">Sair</a></li>
+              <li><a id="btn-signOut" >Sair</a></li>
           </ul>
           <button id="close-btn">X</button>
         </div>
@@ -47,13 +47,7 @@
       <div id="resultado"></div>
      <div id="indicador"></div>
 
-    <script type="module" src="js/controllers/imcController.js">
-
-        
-
-            
-    </script>
-    <script type="module" src="js/controllers/authController.js" ></script>
+    <script type="module" src="js/controllers/imcController.js"></script>
     <script type="module" src="js/controllers/authController.js" ></script>
     <script type="module" src="js/controllers/config.js" ></script>
    
