--- a/configuracoes.html
+++ b/configuracoes.html
@@ -7,7 +7,7 @@
     <title>Calculadora IMC</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="css/styleImc.css">
+    <link rel="stylesheet" href="public/css/styleImc.css">
 </head>
 <body>
   <button id="open-btn" class="fa-solid fa-bars"></button>
@@ -27,9 +27,9 @@
 
     
 
-    <script type="module" src="js/controllers/imcController.js"></script>
-    <script type="module" src="js/controllers/authController.js" ></script>
-    <script type="module" src="js/controllers/config.js" ></script>
+    <script type="module" src="public/js/controllers/imcController.js"></script>
+    <script type="module" src="public/js/controllers/authController.js" ></script>
+    <script type="module" src="public/js/controllers/config.js" ></script>
    
    
    
