mudança nos links das paginas

--- a/imc.html
+++ b/imc.html
@@ -13,9 +13,9 @@
   
         <div class="sidebar" id="sidebar">
           <ul>
-              <li><a id="usuario" href="../public/configuracoes.html">Usuario</a></li>
-              <li><a href="../public/imc.html">Calculadora</a></li>
-              <li><a href="../public/historico-medicoes.html">Historico</a></li>
+              <li><a id="usuario" href="configuracoes.html">Usuario</a></li>
+              <li><a href="imc.html">Calculadora</a></li>
+              <li><a href="historico-medicoes.html">Historico</a></li>
               <li><a id="btn-signOut" >Sair</a></li>
           </ul>
           <button id="close-btn">X</button>
