--- a/configuracoes.html
+++ b/configuracoes.html
@@ -13,10 +13,10 @@
   <button id="open-btn" class="fa-solid fa-bars"></button>
         <div class="sidebar" id="sidebar">
           <ul>
-              <li><a id="usuario" href="../public/configuracoes.html">Usuario</a></li>
-              <li><a href="../public/imc.html">Calculadora</a></li>
-              <li><a href="../public/historico-medicoes.html">Historico</a></li>
-              <li><a href="">Sair</a></li>
+            <li><a id="usuario" href="configuracoes.html">Usuario</a></li>
+            <li><a href="imc.html">Calculadora</a></li>
+            <li><a href="historico-medicoes.html">Historico</a></li>
+            <li><a id="btn-signOut" >Sair</a></li>
           </ul>
           <button id="close-btn">X</button>
         </div>
