redimensionamento da imagem do login

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <div class="box-imgLogin">
-            <img class="img-login" src="public/img/login.avif" alt="imc-login">
+            <img class="img-login" src="public/img/login1.jpg" alt="imc-login">
         </div>
         <form id="login">
             <div class="form-group">
