--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>My App IMC</title>
     <link rel="stylesheet" href="public/css/styleLogin.css">
 </head>
 <body>
