aplicada responsividade na tela de login

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="login-container">
+  
         <div class="box-imgLogin">
+           
             <img class="img-login" src="public/img/login1.jpg" alt="imc-login">
         </div>
+
         <form id="login">
+            <p>My IMC</p>
             <div class="form-group">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
@@ -22,6 +26,7 @@
             </div>
             <button id="btn-login" type="button">Login</button>
         </form>
+
     </div>
     
    
