ajuste na responsividade da calculadora para 80% em telas de 480

--- a/imc.html
+++ b/imc.html
@@ -25,7 +25,7 @@
        
 
 
-    <form id="sombra" class="container card d-flex justify-content-center mt-5 p-3 col-lg-4 col-md-4 col-sm-4">
+    <form id="sombra" class=" formulario container card d-flex justify-content-center mt-5 p-3 col-lg-4 col-md-4 col-sm-4">
 
         <div >
             <h3 class="titulo" >imc<br> (índice de massa corporal)</h3>
