comunicado de paginas em desenvolvimento

--- a/configuracoes.html
+++ b/configuracoes.html
@@ -22,7 +22,9 @@
         </div>
         
        <div>
-        configurações gerais de usuario aqui
+       <h1>configurações gerais de usuario aqui</h1> 
+        <p>pagina em desenvolvimento</p>
+
        </div>
 
     
