--- a/imc.html
+++ b/imc.html
@@ -13,18 +13,15 @@
   
         <div class="sidebar" id="sidebar">
           <ul>
-              <li><a id="usuario" href="configuracoes.html">Usuario</a></li>
+              <li><a id="usuario" href="configuracoes.html">Usuário</a></li>
               <li><a href="imc.html">Calculadora</a></li>
-              <li><a href="historico-medicoes.html">Historico</a></li>
+              <li><a href="historico-medicoes.html">Histórico</a></li>
               <li><a id="btn-signOut" >Sair</a></li>
           </ul>
           <button id="close-btn">X</button>
         </div>
         <div id="open-btn" class="fa-solid fa-bars"> </div>
         
-       
-
-
     <form id="sombra" class=" formulario container card d-flex justify-content-center mt-5 p-3 col-lg-4 col-md-4 col-sm-4">
 
         <div >
