--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App IMC</title>
+    <title>FitMotion</title>
     <link rel="stylesheet" href="public/css/styleLogin.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         </div>
 
         <form id="login">
-            <p>My IMC</p>
+            <p>FitMotion</p>
             <div class="form-group">
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
