--- a/imc.html
+++ b/imc.html
@@ -20,7 +20,7 @@
           </ul>
           <button id="close-btn">X</button>
         </div>
-        <div id="open-btn" class="fa-solid fa-bars"> </div>
+        <div id="openBtn" class="fa-solid fa-bars"> </div>
         
     <form id="sombra" class=" formulario container card d-flex justify-content-center mt-5 p-3 col-lg-4 col-md-4 col-sm-4">
 
