--- a/historico-medicoes.html
+++ b/historico-medicoes.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="public/css/styleImc.css">
 </head>
 <body>
-  <button id="open-btn" class="fa-solid fa-bars"></button>
+  <button id="openBtn" class="fa-solid fa-bars"></button>
         <div class="sidebar" id="sidebar">
           <ul>
             <li><a id="usuario" href="configuracoes.html">Usuario</a></li>
