adição de novas telas

--- a/imc.html
+++ b/imc.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="public/css/styleImc.css">
 </head>
 <body>
+
+  <header>
+    <div id="openBtn" class="menuMobile">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+      </div>
+  </header>
   
         <div class="sidebar" id="sidebar">
           <ul>
@@ -20,7 +28,7 @@
           </ul>
           <button id="close-btn">X</button>
         </div>
-        <div id="openBtn" class="fa-solid fa-bars"> </div>
+       
         
     <form id="sombra" class=" formulario container card d-flex justify-content-center mt-5 p-3 col-lg-4 col-md-4 col-sm-4">
 
