correção do bug addventlister e adicao da funcao addData

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <input id="peso" type="text" placeholder="0.00" class="form-control" required >
         </div>
         
-        <button type="button" class="btn btn-primary" onclick="calcular()" id="botao" >Calcular</button>
+        <button type="button" class="btn btn-primary" id="btnCalcular" >Calcular</button>
       </form>
       
       <div id="resultado"></div>
@@ -55,8 +55,8 @@
 
     <script type="module" src="public/js/controllers/imcController.js"></script>
     <script type="module" src="public/js/controllers/authController.js" ></script>
-    <script type="module" src="public/js/controllers/config.js" ></script>
-    <script type="module" src="public/js/controllers/configuracoesController.js" ></script>
+    <script type="module" src="public/js/controllers/script.js" ></script>
+    <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
    
    
    
