organização do projeto no padrao mvc

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <script type="module" src="public/js/controllers/imcController.js"></script>
     <script type="module" src="public/js/controllers/authController.js" ></script>
-    <script type="module" src="public/js/controllers/script.js" ></script>
+    <script type="module" src="public/script/script.js" ></script>
     <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
    
    
