--- a/login.html
+++ b/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="public/css/styleLogin.css">
+    <link rel="stylesheet" href="public/css/styleImc.css">
 </head>
 <body>
     <div class="login-container">
   
         <div class="box-imgLogin">
            
-            <img class="img-login" src="public/img/login1.jpg" alt="imc-login">
+            <img class="img-login" src="src/assets/img/login1.jpg" alt="imc-login">
         </div>
 
         <form id="login">
@@ -33,7 +33,7 @@
 
 
     <script type="module" src="public/js/controllers/authController.js"></script>
-    <script type="module" src="public/js/controllers/script.js"></script>
-    <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
+    <script type="module" src="public/script/script.js"></script>
+    <script type="module" src="src/services/app.js" ></script>
 </body>
 </html>
