rename dos services

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="public/css/styleImc.css">
+    <link rel="stylesheet" href="public/css/styleLogin.css">
 </head>
 <body>
     <div class="login-container">
@@ -32,8 +32,8 @@
    
 
 
-    <script type="module" src="public/js/controllers/authController.js"></script>
-    <script type="module" src="public/script/script.js"></script>
+    <script type="module" src="src/controllers/authController.js"></script>
+    <script type="module" src="public/script/"></script>
     <script type="module" src="src/services/app.js" ></script>
 </body>
 </html>
