ajustes nos links entre arquivos

--- a/historico-medicoes.html
+++ b/historico-medicoes.html
@@ -61,11 +61,10 @@
         </div>
         
 
-    <script type="module" src="public/js/controllers/imcController.js"></script>
-    <script type="module" src="public/js/controllers/authController.js" ></script>
-    <script type="module" src="public/js/controllers/script.js" ></script>
-    <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
-   
+    
+    <script type="module" src="src/utils/script.js" ></script>
+    <script type="module" src="src/services/dbsevice.js" ></script>
+    <script type="module" src="src/controllers/authController.js" ></script>
    
    
 </body>
