--- a/configuracoes.html
+++ b/configuracoes.html
@@ -65,11 +65,9 @@
 
     
 
-    <script type="module" src="public/js/controllers/imcController.js"></script>
-    <script type="module" src="public/js/controllers/authController.js" ></script>
-    <script type="module" src="public/js/controllers/script.js" ></script>
-    <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
-   
+    <script type="module" src="src/utils/script.js" ></script>
+    <script type="module" src="src/services/dbsevice.js" ></script>
+    <script type="module" src="src/controllers/authController.js" ></script>
    
    
 </body>
