--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <div id="resultado"></div>
      <div id="indicador"></div>
 
-    <script type="module" src="public/js/controllers/imcController.js"></script>
-    <script type="module" src="public/js/controllers/authController.js" ></script>
-    <script type="module" src="public/script/script.js" ></script>
-    <script type="module" src="public/js/controllers/firebaseSevice.js" ></script>
+    <script type="module" src="src/controllers/imcController.js"></script>
+    <script type="module" src="src/controllers/authController.js" ></script>
+    <script type="module" src="src/utils/script.js" ></script>
+    <script type="module" src="src/services/dbsevice.js" ></script>
    
    
    
